# video-rtsp-server

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  RtspServer.cpp  RtspServer.h  main.cpp
